# basic-coco-object-detection

./: README.md  pyproject.toml
data_preparation/: README.md  coco_data_parser.ipynb  coco_data_visualizer.ipynb  coco_parser_bbox.ipynb  coco_parser_masks.ipynb  preprocess_coco.py  preprocess_coco_1.py  preprocess_coco_2.py  visualize_coco.ipynb  visualize_preprocess_coco.ipynb
deployment/: model_deployment_semantig_seg.py
models/: simple_cnn.py  unet_parts.py
training/: model_training.ipynb  model_training_instance_seg.ipynb  model_training_semantic_seg.ipynb  model_training_semantic_seg.py  visualize_dataloader.ipynb
