[tool.poetry]
name = "basic-coco-object-detection"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.18.0"
opencv-python = "^4.11.0.86"
pycocotools = "^2.0.8"
ujson = "^5.10.0"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
