[tool.poetry]
name = "basic-coco-object-detection"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"
packages = [{ include = "models" }]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
pycocotools = "^2.0.8"
ujson = "^5.10.0"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
torch = "^2.6.0"
pandas = "^2.2.3"
numpy = "^2.2.2"
torchvision = "^0.21.0"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
